Save / Load the choosen theme, fixed a bug with the dark mode slider

--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ p, li {
 }
 
 .slider {
-  background-color: #ccc;
+  background-color: #c0c0c060;
   bottom: 0;
   cursor: pointer;
   left: 0;
